feat: add missing unit tests and clean up the code